--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h1 class="h1-large">Hi, There it's Gopal and I love to creating beautiful website</h1>
+                        <h1 class="h1-large">Hi, There it's Gopal, and I love creating beautiful website</h1>
                         <a class="btn-solid-lg page-scroll" href="#about">Discover</a>
                         <a class="btn-outline-lg page-scroll" href="#contact"><i class="fas fa-user"></i>Contact Me</a>
                     </div> <!-- end of text-container -->
@@ -166,6 +166,14 @@
                         <p>I can code my own designs or even use the customer's design as base. My focus is to generate clean code that's well structured for reliability</p>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
+                <div class="col-lg-4">
+                    <div class="text-box">
+                        <i class="fas fa-code"></i>
+                        <h4>Machine learning</h4>
+                        <p>I can code my own designs or even use the customer's design as base. My focus is to generate clean code that's well structured for reliability</p>
+                    </div> <!-- end of text-box -->
+                </div> <!-- end of col -->
+                
                 
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
